tests/compilation_error/basic_variable_deletion.ll
// The delete statement only works for arrays
int a
delete a
